<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.ThirdFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/textview_third"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/hello_third_fragment"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/button_next"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxGroup" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/button_next"
        app:layout_constraintTop_toBottomOf="@id/checkboxGroup" />

    <LinearLayout
        android:id="@+id/checkboxGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/MN2000191"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000191" />

        <CheckBox
            android:id="@+id/MN2000194"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000194" />

        <CheckBox
            android:id="@+id/MN2000195"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000195" />

        <CheckBox
            android:id="@+id/MN2000196"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000196" />

        <CheckBox
            android:id="@+id/MN2000197"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000197" />

        <CheckBox
            android:id="@+id/MN2000198"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MN2000198" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/fetchData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/crawler_btn"/>


    <Button
        android:id="@+id/crawler_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="start"
        app:layout_constraintStart_toStartOf="@+id/checkboxGroup"
        app:layout_constraintTop_toBottomOf="@+id/checkboxGroup" />

    <Button
        android:id="@+id/create_testPlan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="플랜 생성"
        app:layout_constraintEnd_toEndOf="@+id/crawler_btn"
        app:layout_constraintTop_toBottomOf="@+id/crawler_btn"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>